# Converter

./: .gitignore  .gitlab-ci.yml  CODE_OF_CONDUCT.md  Cargo.toml  PRESS.md  README.md  build_dev.sh  cargo-sources.json  converter.doap  install.sh  io.gitlab.adhami3310.Converter.json  io.gitlab.adhami3310.Switcheroo.json  meson.build  messages.po  sv.po  unsaved file 1  update_translation.sh
converter/: converter.gresource.xml  converter.in  dialog_converting.py  file_chooser.py  filters.py  main.py  meson.build  style-hc.css  style.css  threading.py  window.py
converter/gtk/: dialog-converting.blp  window.blp
data/: io.gitlab.adhami3310.Converter.desktop.in  io.gitlab.adhami3310.Converter.desktop.in.in  io.gitlab.adhami3310.Converter.gschema.xml  io.gitlab.adhami3310.Converter.gschema.xml.in  io.gitlab.adhami3310.Converter.metainfo.xml.in  io.gitlab.adhami3310.Converter.metainfo.xml.in.in  io.gitlab.adhami3310.Converter.service.in  io.gitlab.adhami3310.Switcheroo.gschema.xml.in  io.gitlab.adhami3310.Switcheroo.metainfo.xml.in.in  meson.build
data/icons/: meson.build
data/resources/: meson.build  resources.gresource.xml  style-hc.css  style.css
data/resources/blueprints/: help-overlay.blp  image-rest.blp  image-thumbnail.blp  window.blp
po/: LINGUAS  POTFILES  POTFILES.in  ar.po  bg.po  converter.po  converter.pot  cs.po  de.po  es.po  fr.po  hi.po  hr.po  it.po  ka.po  kw.po  meson.build  nl.po  oc.po  pt.po  pt_BR.po  ru.po  sv.po  switcheroo.pot  tr.po  zh_cn.po
snap/: snapcraft.yaml
src/: .gitlab-ci.yml  application.rs  color.rs  drag_overlay.rs  file_chooser.rs  filetypes.rs  input_file.rs  magick.rs  main.rs  meson.build  temp.rs  window.rs
src/widgets/: about_window.rs  image_rest.rs  image_thumbnail.rs  mod.rs
