[package]
name = "switcheroo"
version = "2.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
glib = "0.20"
gtk = { version = "0.9", package = "gtk4", features = [
    "blueprint",
    "gnome_47",
] }
gtk-macros = { version = "0.9", package = "gtk4-macros", features = [
    "blueprint",
] }
adw = { version = "0.7", package = "libadwaita", features = ["v1_6"] }
log = "0.4"
once_cell = "1.19"
pretty_env_logger = "0.5"
itertools = "0.14"
tokio = { version = "1.40", features = ["process", "rt", "rt-multi-thread"] }
futures = "0.3"
ashpd = { version = "0.10.2", features = [
    "async-std",
], default-features = false }
tempfile = "3.12"
regex = "1.10"
rand = "0.9"
shared_child = "1.0"
fdlimit = "0.3"
derivative = "2.2"
async-channel = "2.3"
