[package]
name = "switcheroo"
version = "2.4.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
glib = "0.21"
gtk = { version = "0.10", package = "gtk4", features = ["blueprint", "v4_16"] }
gtk-macros = { version = "0.10", package = "gtk4-macros", features = [
    "blueprint",
] }
adw = { version = "0.8", package = "libadwaita", features = ["v1_7"] }
log = "0.4"
once_cell = "1.21"
pretty_env_logger = "0.5"
itertools = "0.14"
tokio = { version = "1.47", features = ["process", "rt", "rt-multi-thread"] }
futures = "0.3"
ashpd = { version = "0.12" }
tempfile = "3.21"
regex = "1.11"
rand = "0.9"
shared_child = "1.1"
fdlimit = "0.3"
derivative = "2.2"
async-channel = "2.5"
